Fix fucking overflow

--- a/css/poole.css
+++ b/css/poole.css
@@ -164,17 +164,16 @@ pre {
   font-size: .8rem;
   line-height: 1.4;
   white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
   background-color: #f9f9f9;
 }
+
 pre code {
   padding: 0;
   font-size: 100%;
   color: inherit;
   background-color: transparent;
 }
+
 .highlight {
   margin-bottom: 1rem;
   border-radius: 4px;
